--- a/src/rgw/logrotate.conf
+++ b/src/rgw/logrotate.conf
@@ -9,6 +9,16 @@
         elif which service > /dev/null && [ -x `which service` ]; then
             service radosgw reload >/dev/null
         fi
+        # Possibly reload twice, but depending on ceph.conf the reload above may be a no-op
+        if which initctl > /dev/null && [ -x `which initctl` ]; then
+            # upstart reload isn't very helpful here:
+            #   https://bugs.launchpad.net/upstart/+bug/1012938
+	    initctl list \
+		| sed -n 's/^\(radosgw\+\)[ \t]\+(\([^ \/]\+\)\/\([^ \/]\+\))[ \t]\+start\/.*$/\1 cluster=\2 id=\3/p' \
+		| while read l; do
+		initctl reload -- $l 2>/dev/null || :
+	    done
+        fi
     endscript
     missingok
 }
