Build: Change build to always use system leveldb
Dynamically link to the leveldb installed on the system rather than
statically linking ceph copy.  Remove the --with-system-leveldb config
option, and add a requirement for leveldb libraries for rpm and debian
packages.  Bug 3945.

Signed-off-by: Gary Lowell  <gary.lowell@inktank.com>
(cherry picked from commit ea546aef0c86da521f8a360d4bfd10315af3f46b)

--- a/configure.ac
+++ b/configure.ac
@@ -18,7 +18,6 @@ RPM_RELEASE=`if expr index $(git describe --always) '-' > /dev/null ; then git d
 AC_CONFIG_MACRO_DIR([m4])
 
 AC_CONFIG_SUBDIRS([src/gtest])
-AC_CONFIG_SUBDIRS([src/leveldb])
 
 # Environment
 AC_CANONICAL_HOST
@@ -401,16 +400,8 @@ AC_ARG_WITH([ocf],
             [with_ocf=no])
 AM_CONDITIONAL(WITH_OCF, [ test "$with_ocf" = "yes" ])
 
-# use system leveldb?
-AC_ARG_WITH([system-leveldb],
-	[AS_HELP_STRING([--with-system-leveldb], [use system leveldb])],
-	,
-	[with_system_leveldb=no])
-AS_IF([test "x$with_system_leveldb" = xyes],
-	    [AC_CHECK_LIB([leveldb], [leveldb_open], [], [AC_MSG_FAILURE([libleveldb not found])], [-lsnappy -lpthread])])
-AS_IF([test "x$with_system_leveldb" = xcheck],
-	    [AC_CHECK_LIB([leveldb], [leveldb_open], [with_system_leveldb=yes], [], [-lsnappy -lpthread])])
-AM_CONDITIONAL(WITH_SYSTEM_LEVELDB, [ test "$with_system_leveldb" = "yes" ])
+# use system leveldb
+AC_CHECK_LIB([leveldb], [leveldb_open], [], [AC_MSG_FAILURE([libleveldb not found])], [-lsnappy -lpthread])
 
 # look for fuse_getgroups and define FUSE_GETGROUPS if found
 AC_CHECK_FUNCS([fuse_getgroups])
